--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -5472,3 +5473,88 @@ button.close {
   -ms-background-size: 80%;
   -o-background-size: 80%;
   background-size: 80%; }
+
+.nav-item {
+  margin: 0;
+  padding: 5px 0 0 0;
+  box-sizing: border-box;
+  height: 5vh;
+  color: #f9c616;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  font-weight: 900;
+  cursor: pointer; }
+  .nav-item:active, .nav-item:hover, .nav-item:focus {
+    background: #f5f5f5;
+    border-right: 5px solid #6b6b6b;
+    color: #323232; }
+  .nav-item span {
+    margin: 0 0 0 15%; }
+
+.active-links {
+  display: flex;
+  justify-content: flex-end;
+  margin: 7vh 0 0 0;
+  padding: 0;
+  height: 4vh;
+  border-right: 1px solid #f9c616; }
+
+.fb {
+  margin: 0 4px 0 0;
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  content: "";
+  background: url(../img/fb.png) center center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+
+.insta {
+  margin: 0 4px 0 0;
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  content: "";
+  background: url(../img/insta.png) center center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+
+.v {
+  margin: 0 4px 0 0;
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  content: "";
+  background: url(../img/v.png) center center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+
+.pass-links {
+  display: flex;
+  justify-content: flex-start;
+  margin: 7vh 0 0 0;
+  padding: 0;
+  height: 4vh;
+  border-right: 1px solid #f9c616; }
+
+.ik {
+  margin: 0 0 0 4px;
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  content: "";
+  background: url(../img/ik.png) center center no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
