--- a/css/style.scss
+++ b/css/style.scss
@@ -60,13 +60,14 @@ body {
 .menu {
   display: block;
   background: black;
-  height: 100vh;
+  height: 110vh;
 }
 
 .logo-section {
   display: block;
   position: relative;
   z-index: 3;
+  padding: 50%;
   width: 100%;
   height: 25vh;
   // background: ;
@@ -163,4 +164,11 @@ body {
   height: 92vh;
   background: url(../img/main.jpg) center center no-repeat;
   @include background-size(cover);
+}
+
+.latest-works {
+  text-align: center;
+  color: #f9c616;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10
 }
