--- a/css/style.scss
+++ b/css/style.scss
@@ -161,7 +161,7 @@ body {
 
 
 .home {
-  height: 92vh;
+  height: 91vh;
   background: url(../img/main.jpg) center center no-repeat;
   @include background-size(cover);
 }
@@ -170,5 +170,10 @@ body {
   text-align: center;
   color: #f9c616;
   font-family: 'Montserrat', sans-serif;
-  margin: 10
+  margin: 12px 0 0 0;
+  h2 {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+  }
 }
