--- a/css/style.scss
+++ b/css/style.scss
@@ -177,3 +177,17 @@ body {
     font-weight: 900;
   }
 }
+
+.main-content {
+  position: relative;
+  top: 30%;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+  a {
+    text-decoration: none;
+    background: #ffc600;
+  }
+}
