--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@
 // @import 'font-awesome-4.7.0/css/font-awesome.min';
 // @import 'font-awesome-4.7.0/scss/font-awesome';
 // @import '../font-awesome-4.7.0/css/font-awesome.min';
+@import 'font-awesome-4.7.0/scss/font-awesome';
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
@@ -57,7 +58,7 @@ body {
   background: #323232;
 }
 
-.menu {
+.side-menu {
   display: block;
   background: black;
   height: 110vh;
@@ -66,13 +67,13 @@ body {
 .logo-section {
   display: block;
   position: relative;
-  z-index: 3;
-  padding: 50%;
+  z-index: 2;
+  padding: 40%;
   width: 100%;
-  height: 25vh;
+  height: 10vh;
   // background: ;
   background: url(../img/logo.png) center center no-repeat #f9c616;
-  @include background-size(80%);
+  @include background-size(50%);
 }
 
 .nav-item {
@@ -154,7 +155,7 @@ body {
   font-family: 'Roboto', sans-serif;
   p {
     margin: 0 0 0 2vw;
-    font-size: 0.66em;
+    font-size: 1em;
     color: #b3b2b2;
   }
 }
@@ -186,8 +187,70 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-weight: 900;
+  h2 {
+    margin: 0 0 7vh 0;
+    font-weight: 900;
+    font-size: 1.8em;
+  }
+  h1 {
+    margin: 0;
+    font-weight: 900;
+    font-size: 3em;
+  }
   a {
+    padding: 15px 20px 15px 20px;
     text-decoration: none;
     background: #ffc600;
+    color: #323232;
   }
 }
+
+
+
+.close-icon {
+  position: fixed;
+  top: 12vh;
+  right: 25vw;
+  // margin: 0 0 0 4px;
+  display: inline-block;
+  height: 21px;
+  width: 21px;
+  content: "";
+  background: url(../img/close-icon.png) center center no-repeat;
+  @include background-size(cover);
+  cursor: pointer;
+}
+
+.contact-form-section {
+  // display: none;
+  display: block;
+  z-index: 3;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  padding: 0;
+  background: rgba(39,22,19,.65);
+}
+
+.contact-form {
+  margin: 20vh 0 0 0;
+  background: #f5f5f5;
+}
+
+.contact-info {
+  height: 50vh;
+}
+
+.contact-logo {
+  display: block;
+  position: relative;
+  z-index: 2;
+  padding: 4%;
+  width: 100%;
+  height: 100%;
+  // background: ;
+  background: url(../img/logo.png) center center no-repeat;
+  @include background-size(50%);
+}
+
+
