--- a/css/style.scss
+++ b/css/style.scss
@@ -254,3 +254,37 @@ body {
 }
 
 
+.user-contacts-section {
+  margin-top: 25px;
+  p {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    margin: 10px 0 0 0;
+  }
+}
+
+.user-contact {
+  width: 115%;
+  border: none;
+  background: #eaeaea;
+}
+.contact-textarea {
+  width: 107%;
+  border: none;
+  background: #eaeaea;
+}
+
+.send-request-contact {
+  input {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    margin: 10px 0 10px 0;
+    background: #f9c616;
+    padding: 3px 43px 3px 43px;
+    border: none;
+    outline: none;
+  }
+}
+
