--- a/css/style.scss
+++ b/css/style.scss
@@ -62,6 +62,9 @@ body {
   display: block;
   background: black;
   height: 110vh;
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 .logo-section {
@@ -101,36 +104,51 @@ body {
   justify-content: flex-end;
   margin: 7vh 0 0 0;
   padding: 0;
-  height: 4vh;
+  height: 5vh;
   border-right: 1px solid #f9c616;
 }
 
 .fb {
-  margin: 0 4px 0 0;
+  margin: 0 6px 0 0;
   display: inline-block;
-  height: 21px;
-  width: 21px;
+  height: 28px;
+  width: 28px;
   content: "";
   background: url(../img/fb.png) center center no-repeat;
   @include background-size(cover);
+  @media (max-width: 1000px) {
+    margin: 0 4px 0 0;
+      height: 21px;
+      width: 21px;
+  }
 }
 .insta {
-  margin: 0 4px 0 0;
+  margin: 0 6px 0 0;
   display: inline-block;
-  height: 21px;
-  width: 21px;
+  height: 28px;
+  width: 28px;
   content: "";
   background: url(../img/insta.png) center center no-repeat;
   @include background-size(cover);
+  @media (max-width: 1000px) {
+      margin: 0 4px 0 0;
+      height: 21px;
+      width: 21px;
+  }
 }
 .v {
-  margin: 0 4px 0 0;
+  margin: 0 6px 0 0;
   display: inline-block;
-  height: 21px;
-  width: 21px;
+  height: 28px;
+  width: 28px;
   content: "";
   background: url(../img/v.png) center center no-repeat;
   @include background-size(cover);
+  @media (max-width: 1000px) {
+    margin: 0 4px 0 0;
+      height: 21px;
+      width: 21px;
+  }
 }
 
 .pass-links {
@@ -141,13 +159,18 @@ body {
   height: 4vh;
 }
 .ik {
-  margin: 0 0 0 4px;
+  margin: 0 0 0 6px;
   display: inline-block;
-  height: 21px;
-  width: 21px;
+  height: 28px;
+  width: 28px;
   content: "";
   background: url(../img/ik.png) center center no-repeat;
   @include background-size(cover);
+  @media (max-width: 1000px) {
+    margin: 0 0 0 4px;
+      height: 21px;
+      width: 21px;
+  }
 }
 
 .contacts {
@@ -157,6 +180,21 @@ body {
     margin: 0 0 0 2vw;
     font-size: 1em;
     color: #b3b2b2;
+    @media (max-width: 1270px) {
+        font-size: 0.8em;
+    }
+    @media (max-width: 1000px) {
+        font-size: 0.67em;
+    }
+    @media (max-width: 820px) {
+        font-size: 0.6em;
+    }
+    @media (max-width: 750px) {
+        font-size: 0.5em;
+    }
+    @media (max-width: 630px) {
+        font-size: 0.4em;
+    }
   }
 }
 
@@ -222,8 +260,8 @@ body {
 }
 
 .contact-form-section {
-  // display: none;
-  display: block;
+  display: none;
+  // display: block;
   z-index: 3;
   position: fixed;
   height: 100vh;
