--- a/css/style.css
+++ b/css/style.css
@@ -7790,11 +7790,14 @@ button.close {
 body {
   background: #323232; }
 
+.costom-row {
+  margin: 0; }
+
 .menu-burger {
-  z-index: 2;
+  z-index: 66666;
   position: fixed;
-  top: 45px;
-  left: 45px;
+  top: 15px;
+  left: 15px;
   border: none;
   background-color: inherit;
   color: #f9c616;
@@ -7825,7 +7828,6 @@ body {
   position: relative;
   z-index: 2;
   padding: 40%;
-  width: 300px;
   height: 10vh;
   background: url(../img/logo.png) center center no-repeat #f9c616;
   -webkit-background-size: 50%;
@@ -7833,6 +7835,17 @@ body {
   -ms-background-size: 50%;
   -o-background-size: 50%;
   background-size: 50%; }
+  @media (max-height: 400px) {
+    .logo-section-mobile {
+      padding: 30%; } }
+
+.contacts-mobile {
+  margin: 1.8vh 0 0 0;
+  font-family: 'Roboto', sans-serif; }
+  .contacts-mobile p {
+    margin: 0 0 0 40px;
+    font-size: 1.1em;
+    color: #b3b2b2; }
 
 .side-menu {
   display: block;
