--- a/css/style.css
+++ b/css/style.css
@@ -7802,7 +7802,7 @@ body {
   background-color: inherit;
   color: #f9c616;
   outline: none; }
-  @media (min-width: 768px) {
+  @media (min-width: 769px) {
     .menu-burger {
       display: none; } }
   .menu-burger .burger-icon {
@@ -7819,7 +7819,7 @@ body {
   height: 110vh;
   width: 300px;
   margin: 0; }
-  @media (min-width: 768px) {
+  @media (min-width: 769px) {
     .side-menu-mobile {
       display: none; } }
 
@@ -7995,6 +7995,10 @@ body {
     @media (max-width: 630px) {
       .contacts p {
         font-size: 0.4em; } }
+
+@media (width: 768px) {
+  .main-pg {
+    width: 100%; } }
 
 .home {
   height: 91vh;
