--- a/css/style.scss
+++ b/css/style.scss
@@ -72,7 +72,7 @@ body {
   background-color: inherit;
   color: #f9c616;
   outline: none;
-  @media (min-width: 768px) {
+  @media (min-width: 769px) {
     display: none;
   }
   .burger-icon {
@@ -92,7 +92,7 @@ body {
   height: 110vh;
   width: 300px;
   margin: 0;
-  @media (min-width: 768px) {
+  @media (min-width: 769px) {
     display: none;
   }
 }
@@ -265,6 +265,13 @@ body {
   }
 }
 
+
+
+.main-pg {
+  @media (width: 768px) {
+        width: 100%;
+    }
+}
 
 .home {
   height: 91vh;
